Added thumbnail creation support, changed display style slightly, fixed a erroneous log message

--- a/static/style.css
+++ b/static/style.css
@@ -1,3 +1,10 @@
 body {
-  background-color: #FFFFEE
+  background-color: #FFFFEE;
+}
+ul {
+  
+  list-style-type: none;
+}
+li {
+  display: inline;
 }
