Reduce margin to 0, which bring the page width down.  This makes two pics on the index fit exactly onto a 360px wide screen, such as a phone

--- a/static/style.css
+++ b/static/style.css
@@ -1,11 +1,13 @@
 body {
   background-color: #FFFFEE;
+  margin: 0
 }
 
 ul.thumbnail-list {
   list-style-type: none;
   padding: 0;
 }
+
 li {
   display: inline;
 }
