Make each thumbnail its own type

--- a/static/style.css
+++ b/static/style.css
@@ -21,7 +21,7 @@ li {
 }
 
 .thumbnail-cntr {
-  background-color: #2c1fc0;
+  background-color: #FFFFEE;
   border-style: solid;
   border-width: 2px;
   border-color: #2c1fc0;
